define minimum height for blocks on overview-settings to fix weird wrapping

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -212,6 +212,7 @@
     margin-right: 2%;
     float: left;
     width: 300px;
+    min-height: (1 / 2) * @standardBlockSize;
     &:last-child {
       margin-right: 0;
     }
